template/iptables/iptables-advanced
# Generated by iptables-save v1.3.5 on Mon Jun 25 19:05:49 2012
*filter

:INPUT   DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT  ACCEPT [0:0]
:SERVICE - [0:0]

# VPNクライアントからの受信を許可
-A INPUT -p udp --dport 1194 -j ACCEPT

# ループバックインターフェイスは常に許可
-A INPUT -i lo -j ACCEPT

# icmpについては常に許可
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# サーバー内のネームサーバーへのパケット許可
-A INPUT -p udp --dport 53 -j ACCEPT

# サーバー外への名前問い合わせ許可
-A INPUT -p udp --sport 53 -j ACCEPT

-A INPUT -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m state --state NEW ! --syn -j DROP
-A INPUT -p tcp -m state --state NEW -j SERVICE

# 指定したポートを開く
-A SERVICE -p tcp -m multiport --dport 21,22,25,80,443 -j ACCEPT

# 外部からファイルをダウンロードできるようにする
# 80 -> http
# 443 -> https
# 9418 -> git
-A SERVICE -p tcp -m multiport --sport 80,443,9418 -j ACCEPT

COMMIT
# Completed on Mon Jun 25 19:05:49 2012
